<resources>
    <string name="app_name">videoedit</string>
    <string name="add_video_hint_text">可以添加视频或者标题片段</string>
    <string name="edit_video">编辑视频</string>
    <string name="save_and_share">保存/分享</string>
    <string name="tap_input_title">轻点输入标题</string>
    <string name="time_one_second">1S</string>
    <string name="time_three_second">3S</string>
    <string name="time_five_second">5S</string>
    <string name="cancel">取消</string>
    <string name="continue_edit">继续编辑</string>
    <string name="cancel_edit">放弃更改</string>
    <string name="item_pick_album">相册</string>
    <string name="video">视频</string>
    <string name="time_seconds">%ds</string>
    <string name="cutted_time">已截取%d秒</string>
    <string name="delete_select">删除框选</string>
    <string name="save_select">保留框选</string>
    <string name="reset_select">还原</string>
    <string name="edit_cut">剪切</string>
    <string name="finish">完成</string>
    <string name="water_marker">水印</string>
    <string name="select_apply_range">请选择应用范围</string>
    <string name="apply_current_video_clip">应用于当前视频片段</string>
    <string name="apply_current_all_video">应用于所有视频</string>
    <string name="long_press_drag_sort">长按拖动分段可更换顺序</string>
    <string name="edit_move">移动</string>
    <string name="slide_select_split_position">滑动视频选择分割和插入的位置</string>
    <string name="edit_split_insert">分割(插入)</string>
    <string name="edit_split">分割</string>
    <string name="edit_water_marker">水印</string>
    <string name="edit_delete">删除</string>
    <string name="edit_insert_video_pic">插入视频</string>
    <string name="edit_insert_title">插入标题</string>
    <string name="text_color">字体颜色</string>
    <string name="background_color">背景颜色</string>
    <string name="time_setting">时间设置</string>
    <string name="select_video_start_edit">选择视频开始编辑</string>
</resources>