<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView
		android:id="@+id/titleTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/edit_video"
		android:layout_centerInParent="true"
		android:textSize="16sp"
		android:textStyle="bold"
		android:textColor="@color/color_black1"/>

	<ImageButton
		android:id="@+id/titleBackBtn"
		android:layout_width="45dp"
		android:layout_height="45dp"
		android:src="@drawable/btn_back"
		android:background="@android:color/transparent"
		android:layout_centerVertical="true"
		android:scaleType="fitXY"
		android:padding="10dp"
		/>

	<Button
		android:id="@+id/titleLeftBtn"
		android:layout_width="60dp"
		android:layout_height="25dp"
		android:layout_centerVertical="true"
		android:text="@string/cancel"
		android:textColor="@color/color_black"
		android:visibility="gone"
		android:background="@color/transparent"
		android:button="@null"
		/>

	<Button
		android:id="@+id/titleRightBtn"
		android:layout_width="70dp"
		android:layout_height="25dp"
		android:layout_centerVertical="true"
		android:layout_alignParentEnd="true"
		android:layout_marginEnd="10dp"
		android:background="@drawable/bg_continue_edit_video"
		android:text="@string/save_and_share"
		android:textColor="@color/white"
		android:textStyle="bold"
		/>

</RelativeLayout>