<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:animateLayoutChanges="true"
	android:layout_width="match_parent"
	android:layout_height="230dp">

	<androidx.constraintlayout.helper.widget.Flow
		android:id="@+id/controlLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginTop="8dp"
		app:constraint_referenced_ids="videoPlayBtn,currentTimeText,videoSeekBar,durationTimeText"
		/>

	<ImageView
		android:id="@+id/videoPlayBtn"
		android:layout_width="25dp"
		android:layout_height="25dp"
		android:src="@drawable/bg_play_btn"
		android:text="00:00"
		tools:ignore="MissingConstraints"/>

	<TextView
		android:id="@+id/currentTimeText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="10dp"
		android:text="00:00"
		tools:ignore="MissingConstraints"/>

	<SeekBar
		android:id="@+id/videoSeekBar"
		android:layout_width="215dp"
		android:layout_height="wrap_content"
		android:thumb="@drawable/bg_video_seekbar_thumb"
		android:progressDrawable="@drawable/bg_video_seekbar_progress"
		tools:ignore="MissingConstraints"
		/>

	<TextView
		android:id="@+id/durationTimeText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="00:00"
		android:layout_marginEnd="10dp"
		tools:ignore="MissingConstraints"/>

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/videoListView"
		android:layout_width="match_parent"
		android:layout_height="75dp"
		app:layout_constraintTop_toBottomOf="@id/controlLayout"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginStart="15dp"
		android:layout_marginEnd="15dp"
		android:layout_marginTop="20dp"/>

	<LinearLayout
		android:id="@+id/selectVideoMenuLayout"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginBottom="30dp"
		android:visibility="visible">

		<TextView
			android:id="@+id/cutBtn"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"
			android:text="@string/edit_cut"
			android:drawableTop="@drawable/ic_video_cut"
			android:gravity="center"
			android:textSize="13sp"
			android:textColor="@color/color_black"/>

		<TextView
			android:id="@+id/splitBtn"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"
			android:text="@string/edit_split_insert"
			android:drawableTop="@drawable/ic_video_insert_enable"
			android:gravity="center"
			android:textSize="13sp"
			android:textColor="@color/color_black"/>

		<TextView
			android:id="@+id/markerBtn"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"
			android:text="@string/edit_water_marker"
			android:drawableTop="@drawable/ic_video_marker"
			android:gravity="center"
			android:textSize="13sp"
			android:textColor="@color/color_black"/>

		<TextView
			android:id="@+id/sortBtn"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"
			android:text="@string/edit_move"
			android:drawableTop="@drawable/ic_video_move"
			android:gravity="center"
			android:textSize="13sp"
			android:textColor="@color/color_black"/>

		<TextView
			android:id="@+id/deleteBtn"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"
			android:text="@string/edit_delete"
			android:drawableTop="@drawable/ic_video_delete"
			android:gravity="center"
			android:textSize="13sp"
			android:textColor="@color/color_black"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/addVideoMenuLayout"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="35dp"
		android:layout_marginBottom="30dp"
		android:visibility="gone">

		<TextView
			android:id="@+id/addVideoLeftBtn"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"
			android:text="@string/edit_insert_video_pic"
			android:drawableTop="@drawable/ic_add_video"
			android:gravity="center"
			android:layout_marginStart="35dp"
			android:textSize="13sp"
			android:textColor="@color/color_black"/>

		<TextView
			android:id="@+id/addTitleBtn"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"
			android:text="@string/edit_insert_title"
			android:drawableTop="@drawable/ic_add_title"
			android:gravity="center"
			android:layout_marginStart="35dp"
			android:textSize="13sp"
			android:textColor="@color/color_black"/>

	</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>