<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="230dp">

	<TextView
		android:id="@+id/hintText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/slide_select_split_position"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/slideTimeText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="00:00"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/hintText"
		android:layout_marginTop="5dp"
		/>

	<TextView
		android:id="@+id/durationTimeText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/hintText"
		android:layout_marginTop="5dp"
		android:layout_marginEnd="15dp"
		android:textSize="11sp"
		android:textColor="@color/color_black"
		/>

	<com.haoqi.teacher.videoedit.widget.timeline.TimeLineRecyclerView
		android:id="@+id/videoTimeLineView"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		app:layout_constraintTop_toBottomOf="@id/slideTimeText"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginTop="10dp"/>

	<View
		android:layout_width="5dp"
		android:layout_height="60dp"
		android:background="#3A78E5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/slideTimeText"
		android:layout_marginTop="8dp"/>

	<androidx.constraintlayout.helper.widget.Flow
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:constraint_referenced_ids="splitCutBtn,splitInsertVideoBtn,splitInsertTitleBtn"
		android:layout_marginBottom="30dp"
		/>

	<TextView
		android:id="@+id/splitCutBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/edit_split"
		android:drawableTop="@drawable/ic_video_insert"
		android:textSize="13sp"
		android:textColor="@color/color_black"
		android:gravity="center"
		tools:ignore="MissingConstraints"/>

	<TextView
		android:id="@+id/splitInsertVideoBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/edit_insert_video_pic"
		android:drawableTop="@drawable/ic_add_video"
		android:textSize="13sp"
		android:textColor="@color/color_black"
		android:gravity="center"
		tools:ignore="MissingConstraints"/>

	<TextView
		android:id="@+id/splitInsertTitleBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/edit_insert_title"
		android:drawableTop="@drawable/ic_add_title"
		android:textSize="13sp"
		android:gravity="center"
		android:textColor="@color/color_black"
		tools:ignore="MissingConstraints"/>


</androidx.constraintlayout.widget.ConstraintLayout>